# auto-debugger

./: .gitignore  .mcp.json  MANUAL_TEST_INSTRUCTIONS.md  README.md  TESTING.md  TEST_F_KEY.md  debug_output.txt  debug_silent_bug_demo.py  dependency_analyzer.py  enhanced_capture_ideas.md  pyproject.toml  run_session_ui.sh  test_all_features.py  test_api.py  test_async_extraction.py  test_audio_features.py  test_calculator.sh  test_calculator_audio_manual.sh  test_combined_limits.py  test_combined_with_breakpoint.py  test_debugger.py  test_direct.py  test_disk_quick.py  test_disk_simple.py  test_disk_usage.py  test_extraction.py  test_extraction_timing.py  test_fixed.py  test_function_body.py  test_functions.py  test_loop_iterations.py  test_loop_simple.py  test_manual.py  test_memory_simple.py  test_memory_usage.py  test_minimal.html  test_minimal_enhanced.py  test_multifile.py  test_nested_audio.sh  test_simple.py  (+5 more)
autodebugger/: __main__.py  audio_ui.py  cli.py  common.py  control.py  dap_client.py  db.py  enhanced_control.py  function_blocks.py  nested_explorer.py  runner.py  schema_migrations.py  syntax_to_speech.py  ui.py  unified_ui.py
autodebugger/templates/: index.html  launch_manual.html  session_detail.html  sessions.html
mcp-autodebug/: package.json
mcp-autodebug-py/: README.md  mcp_server.py  pyproject.toml  test_mcp_server.py
mcp-autodebug/src/: index.ts
roo-bridge-test/extension/: roo-bridge-test-0.0.1.vsix
tests/: crash.py  simple.py  test_nested_structures.py
tests/calculator/: __init__.py  calculator.py  main.py
(+4 files in other folders)
